[package]
name = "composto-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "composto"

[dependencies]
mlua = { version = "0.9", features = ["lua54"] }
anyhow = "1.0"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
features = [
    "backend_session",
    "backend_udev",
    "backend_libinput",
    "backend_x11",
    "backend_egl",
    "backend_vulkan",
    "backend_drm",
    "wayland_frontend",
    "desktop",
]
